1998-01-26  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/alpha/syscalls.list: Add change to
	support sigaction on kernels > 2.1.7x.

1998-01-01 13:52  Ulrich Drepper  <drepper@cygnus.com>

	* elf/dl-misc.c (_dl_sysdep_read_whole_file): Don't map the file
	if it is empty.

	* elf/rtld.c (dl_main): Correct parsing of ld.so.preload file.
	Patch by David Engel <david@sw.ods.com>.

	* configure.in: Fix another typo in --enable-add-ons code.

1998-01-26 03:48  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/siglist.c: Add copyright text.

1998-01-26  Andreas Jaeger  <aj@arthur.rhein-neckar.de>

	* nss/nss_files/files-network.c: Correct order of parameters for
	getnetbyaddr.

1998-01-26 00:57  Ulrich Drepper  <drepper@cygnus.com>

	* db2/Makefile (routines): Add os_alloc.
	* db2/db.h: Update from db-2.3.16.
	* db2/db_185.h: Likewise.
	* db2/db_int.h: Likewise.
	* db2/btree/bt_close.c: Likewise.
	* db2/btree/bt_cursor.c: Likewise.
	* db2/btree/bt_delete.c: Likewise.
	* db2/btree/bt_open.c: Likewise.
	* db2/btree/bt_page.c: Likewise.
	* db2/btree/bt_put.c: Likewise.
	* db2/btree/bt_rec.c: Likewise.
	* db2/btree/bt_recno.c: Likewise.
	* db2/btree/btree_auto.c: Likewise.
	* db2/common/db_appinit.c: Likewise.
	* db2/common/db_apprec.c: Likewise.
	* db2/common/db_err.c: Likewise.
	* db2/common/db_region.c: Likewise.
	* db2/common/db_shash.c: Likewise.
	* db2/db/db.c: Likewise.
	* db2/db/db_auto.c: Likewise.
	* db2/db/db_conv.c: Likewise.
	* db2/db/db_dispatch.c: Likewise.
	* db2/db/db_dup.c: Likewise.
	* db2/db/db_pr.c: Likewise.
	* db2/db/db_rec.c: Likewise.
	* db2/db185/db185.c: Likewise.
	* db2/dbm/dbm.c: Likewise.
	* db2/hash/hash.c: Likewise.
	* db2/hash/hash_auto.c: Likewise.
	* db2/hash/hash_dup.c: Likewise.
	* db2/hash/hash_page.c: Likewise.
	* db2/hash/hash_rec.c: Likewise.
	* db2/include/btree_ext.h: Likewise.
	* db2/include/clib_ext.h: Likewise.
	* db2/include/common_ext.h: Likewise.
	* db2/include/db.h.src: Likewise.