@@ -16,7 +16,6 @@ semget		-	semget		3	__semget	semget
 semctl		-	semctl		4	__semctl	semctl
 
 osf_sigprocmask	-	osf_sigprocmask	2	__osf_sigprocmask
-s_sigaction	sigaction osf_sigaction	3	__syscall_sigaction
 
 getpeername	-	getpeername	3	__getpeername	getpeername
 getpriority	-	getpriority	2	__getpriority	getpriority
